# project1-lexer

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonDashAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionAutomaton.cpp  QuestionAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  a.out  lab1  (+5 more)
lab1.dSYM/Contents/Resources/DWARF/: lab1
project1-exampleIO/: test.txt
project1.dSYM/Contents/Resources/DWARF/: project1
